--- a/menu responsivo/atividades/formularios/formulario1/style.css
+++ b/menu responsivo/atividades/formularios/formulario1/style.css
@@ -19,7 +19,7 @@ body {
     background: var(--background);
 }
 
-a.btn-nav{
+a {
     color: var(--white);
     text-decoration: none;
 }
@@ -33,7 +33,7 @@ a.btn-nav{
     height: 4.7rem;
 }
 
-header > a.btn-nav {
+.logo {
     font-size: 1.5rem;
     font-weight: bold;
 }
@@ -44,13 +44,13 @@ header > a.btn-nav {
     gap: 0.5rem;
 }
 
-a.btn-nav {
+.menu a {
     display: block;
     padding: 1rem;
     border-radius: 0.5rem;
 }
 
-li > a.btn-nav:hover{
+.menu a:hover{
     background: var(--royal-blue-dark);
 
 }
@@ -76,7 +76,7 @@ li > a.btn-nav:hover{
         overflow-y: hidden;
     }
 
-    .btn-nav {
+    .menu a {
         padding: 1rem, 0;
         margin-inline: 1rem;
         border-bottom: 0.0625rem, solid rgba(0, 0, 0, 0.16);
@@ -129,4 +129,54 @@ li > a.btn-nav:hover{
     top: -0.4375rem;
 }
 
+
+
+form {
+    margin: 40px auto;
+    width: 400px;
+    padding: 1em;
+    border: 4px solid #CCC;
+    border-radius: 1em;
+}
+
+form div + div {
+    margin-top: 1em;
+}
+
+.formulario {
+    width: 90px;
+    text-align: right;
+}
+
+#msg {
+    width: 353px;
+    margin-top: 5px;
+}
+
+input, textarea {
+    font: 1em sans-serif;
+
+    width: 300px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+    border: 1px solid #999;
+}
+
+input:focus, textarea:focus {
+    border-color: #000;
+}
+
+textarea {
+    vertical-align: top;
+    height: 5em;
+    resize: vertical;
+}
+
+.button {
+    padding-left: 90px;
+}
+button {
+    margin-left: .5em;
+}
 
