--- a/menu responsivo/atividades/style.css
+++ b/menu responsivo/atividades/style.css
@@ -1,14 +1,19 @@
 @charset "UTF-8";
 
+/*font-family: 'Poppins', sans-serif;*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 :root {
      --royal-blue-light: #404eed;
-     --royal-blue-dark: #3946d4;
-     --white: #fff;
-     --background: #e2e3e9;
+     --royal-blue-dark:  #3946d4;
+     --white:            #fff;
+     --background:       #e2e3e9;
 }
 
 * {
     margin: 0px;
+    border: 0px;
     padding: 0px;
     box-sizing: border-box;
 
@@ -19,10 +24,7 @@ body {
     background: var(--background);
 }
 
-a.btn-nav{
-    color: var(--white);
-    text-decoration: none;
-}
+/*nav -------------------------------*/
 
 .header {
     display: flex;
@@ -36,7 +38,9 @@ a.btn-nav{
 header > a.btn-nav {
     font-size: 1.5rem;
     font-weight: bold;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.55);
 }
+
 
 .menu {
     list-style: none;
@@ -48,6 +52,8 @@ a.btn-nav {
     display: block;
     padding: 1rem;
     border-radius: 0.5rem;
+    color: var(--white);
+    text-decoration: none;
 }
 
 li > a.btn-nav:hover{
@@ -130,3 +136,16 @@ li > a.btn-nav:hover{
 }
 
 
+/*Login ------------------------------*/
+
+h1 {
+    margin: 16px;
+}
+
+h2 {
+    margin: 16px;
+}
+
+a {
+    margin: 8px 16px;
+}
